$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- remove ipfw.ko dependency on libalias.ko

- take port options out of .tgz for easier maintenance

- remove stray "nat_iterator" printf from ipnat

- remove ip_input/dummynet/mbuf patches; dummynet + bridging appears
  to work fine now with 8.2

- add ucd-snmp sysDescr patch back in

- remove filtering bridge reminder on System: Advanced page - can't
  keep this forever

- fixup go.sh to find svn and  stage 3 to not exit on strip harmless errors

- major overhaul of wireless LAN support: in FreeBSD 8, it is always
  necessary to create subinterfaces (wlanX) attached to the actual
  physical interfaces (e.g. athX). On some cards, it is now also
  possible to create multiple APs at the same time. To reflect this
  change, the wireless settings have moved to the Interfaces: assign
  page, where WLAN subinterfaces can be created much like for VLANs.

  Older configurations are converted automatically.
  
  To do: test with 802.11n, test with multiple radios in the same
  system; figure out a way to detect multi-BSSID capability on radio

- introduce generic-pc-serial image

- stop patching bootloader: it's kind of hopeless to try and reuse
  the BIOS preset serial baudrate; some BIOSes don't even set it,
  and on ALIX it doesn't work properly either. A fixed 9600 baud
  is probably the lesser evil.

- add regdomain.xml (required for proper WLAN support)

- drop uath from kernel - requires firmware download program,
  probably not worth the hassle since it can't do hostap anyway

- add kernel support for 3g modems with u3g 

- fixup go.sh for csh instead of bashisms

- patch sixxs-aiccu port makefile not to use gnutls (it's too big)

- sync up M0N0WALL_GENERIC kernel config with current state of GENERIC
  config in FreeBSD 8.2 (most importantly: add uart driver for serial
  console support)
